--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
+body{
+  margin: 0px auto;
+  padding: 0px;
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  flex: 30%;
+  width: 100%;
+  background-color: teal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header input{
+  width: 250px;
+  height: 50px;
+  border: 1px solid grey;
+  padding-left: 10px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  font-size: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header button{
+  width: 70px;
+  height: 108px;
+  border: 1px solid grey;
+  padding-left: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  font-size: 15px;
+}
+
+.inputs {
   display: flex;
   flex-direction: column;
+}
+
+.todolist {
+  flex: 70%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-top: 50px;
+  flex-direction: column;
+
+}
+
+.todolistContent{
+  width: 500px;
+  height: 50px;
+  display: flex;
+  color: lightgray;
+  margin: 15px;
+}
+
+.todolistContent .innercontent{
+  flex: 80%;
+  height: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.todolistContent .innercontent span{
+  display: grid;
+  place-items: center;
+  border: 1px solid white;
+  width: 100%;
+  height: 100%;
+  background-color: teal;
+  border-right: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todolistContent button{
+  flex:20%;
+  height: 100%;
+  border: none;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  background-color: salmon;
+  cursor: pointer;
 }
